# longevity-assistant

./: .env.example  .gitignore  CONTRIBUTING.md  PROJECT_MAP.md  README.md  SECURITY.md  package-lock.json  package.json
.github/: pull_request_template.md
data/knowledge/: ubz-documents.json  (+1 more)
docs/: branch-protection-probe.md  public-repo-audit.md
notes/: biomarker-intake-draft-rozbor-krve-review.md  biomarker-intake-draft-rozbor-krve.csv  biomarker-intake-template.csv  biomarker-priority-markers.md  dna-import-source.txt  genetic-priority-markers.md  handoff-2026-06-12-production-context.md  routine-movement-doctor-intake.md
scripts/: import-dna-draft.ps1  normalize-biomarker-workbook.py  run-production-evals.ps1
src/: README.md
src/backend/: README.md  pyproject.toml
src/backend/app/: __init__.py  api.py  config.py  main.py  models.py
src/backend/app/services/: __init__.py  biomarker_confirm_service.py  biomarker_insight_service.py  biomarker_priority_service.py  biomarker_service.py  care_biomarker_service.py  care_recommendation_service.py  conversation_service.py  daily_check_in_service.py  dna_biomarker_service.py  evidence_knowledge_service.py  follow_up_service.py  food_biomarker_service.py  genetic_priority_service.py  genetics_service.py  guidance_service.py  health_signal_service.py  meal_service.py  notion_sync_service.py  profile_service.py  routine_service.py  rules_service.py  source_scope_service.py  storage_service.py  text_normalization_service.py  ubz_knowledge_service.py
src/backend/tests/: test_api.py  test_production_eval_suite.py
(+31 files in other folders)
