[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "longevity-assistant-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for Longevity-assistant."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "pydantic>=2.10,<3.0",
  "httpx>=0.28,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.8,<1.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"
